--- a/frontend/crop.html
+++ b/frontend/crop.html
@@ -25,22 +25,22 @@
           <a class="nav-link" aria-current="page" href="#">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Field</a>
+          <a class="nav-link" href="field.html">Field</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Crop</a>
+          <a class="nav-link" href="crop.html">Crop</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-disabled="true">Staff</a>
+          <a class="nav-link" aria-disabled="true" href="staff.html">Staff</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Monitoring-Log</a>
+          <a class="nav-link" href="monitoring%20logs.html">Monitoring-Log</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Vehicle</a>
+          <a class="nav-link" href="vehicle.html">Vehicle</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-disabled="true">Equipment</a>
+          <a class="nav-link" aria-disabled="true" href="Equipment.html">Equipment</a>
         </li>
 
         <li class="nav-item" id="nav-logout">
