--- a/frontend/field.html
+++ b/frontend/field.html
@@ -110,6 +110,28 @@
   </div>
 </div>
 
+<div class="col-md-8 col-sm-12">
+  <!-- Table Section -->
+  <div class="container">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+        <tr>
+          <th scope="col">Field Image</th>
+          <th scope="col">Field Name</th>
+          <th scope="col">Field Location</th>
+          <th scope="col">Extent Size</th>
+          <th scope="col">Actions</th>
+        </tr>
+        </thead>
+        <tbody id="fields-table">
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
 
 </body>
 </html>
