--- a/frontend/crop.html
+++ b/frontend/crop.html
@@ -101,5 +101,30 @@
     </div>
   </div>
 </div>
+<div class="col-md-8 col-sm-12">
+  <!-- Table Section -->
+  <div class="container">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+        <tr>
+          <th scope="col">Crop Image</th>
+          <th scope="col">Common Name</th>
+          <th scope="col">Scientific Name</th>
+          <th scope="col">Category</th>
+          <th scope="col">Season</th>
+          <th scope="col">Allocated Field</th>
+          <th scope="col">Actions</th>
+        </tr>
+        </thead>
+        <tbody id="crop-table">
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 </body>
 </html>
