add staff table

--- a/frontend/staff.html
+++ b/frontend/staff.html
@@ -151,7 +151,33 @@
         </div>
     </div>
 </div>
+<!-- Table Section -->
+<div class="container">
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Full Name</th>
+                <th scope="col">Designation</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Joined Date</th>
+                <th scope="col">DOB</th>
+                <th scope="col">Address</th>
+                <th scope="col">Contact No.</th>
+                <th scope="col">Email</th>
+                <th scope="col">Role</th>
+                <th scope="col">Actions</th>
+            </tr>
+            </thead>
+            <tbody id="staff-table">
 
+            </tbody>
+        </table>
+    </div>
+</div>
+</div>
+</div>
+</div>
 
 </body>
 </html>
