add monitoring logs table

--- a/frontend/monitoring logs.html
+++ b/frontend/monitoring logs.html
@@ -111,5 +111,31 @@
   </div>
 </div>
 
+<div class="col-md-8 col-sm-12">
+  <!-- Table Section -->
+  <div class="container">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+        <tr>
+          <th scope="col">Log Date</th>
+          <th scope="col">Log Details</th>
+          <th scope="col">Observed Image</th>
+          <th scope="col">Relevant Field(s)</th>
+          <th scope="col">Relevant Crop(s)</th>
+          <th scope="col">Relevant Staff Member(s)</th>
+          <th scope="col">Actions</th>
+        </tr>
+        </thead>
+        <tbody id="log-table">
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
 </body>
 </html>
