--- a/frontend/Equipment.html
+++ b/frontend/Equipment.html
@@ -107,6 +107,28 @@
     </div>
   </div>
 </div>
+<div class="col-md-8 col-sm-12">
+  <!-- Table Section -->
+  <div class="container">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Type</th>
+          <th scope="col">Status</th>
+          <th scope="col">Assigned Staff</th>
+          <th scope="col">Actions</th>
+        </tr>
+        </thead>
+        <tbody id="equipment-table">
 
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 </body>
 </html>
