--- a/frontend/vehicle.html
+++ b/frontend/vehicle.html
@@ -110,5 +110,30 @@
         </div>
     </div>
 </div>
+<div class="col-md-8 col-sm-12">
+    <!-- Table Section -->
+    <div class="container">
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">License Plate Number</th>
+                    <th scope="col">Vehicle Category</th>
+                    <th scope="col">Fuel Type</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Remarks</th>
+                    <th scope="col">Staff</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody id="vehicle-table">
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+</div>
+</div>
 </body>
 </html>
