--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <!-- normalize css -->
+    <link rel="stylesheet" href="assets/normalize.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!--    stylesheet-->
+    <link rel="stylesheet" href="style/style.css">
+
+
 </head>
 <body>
+
+<!--nav bar-->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#" >GS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="field.html">Field</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="crop.html">Crop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-disabled="true" href="staff.html">Staff</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="monitoring%20logs.html">Monitoring-Log</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="vehicle.html">Vehicle</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-disabled="true" href="Equipment.html">Equipment</a>
+                </li>
+
+                <li class="nav-item" id="nav-logout">
+                    <a class="nav-link" aria-disabled="true">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 
 </body>
 </html>
