--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+  <!-- normalize css -->
+  <link rel="stylesheet" href="assets/normalize.css">
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <!--    stylesheet-->
+  <link rel="stylesheet" href="style/login.css">
+
 </head>
 <body>
 <div class="image-container"></div>
