--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,93 @@
     </div>
 </nav>
 
+<!--dashboard-->
+
+<section id="dashboard-section"></section>
+
+<!--field-->
+<section id="field-section">
+
+    <div class="container-fluid light-style flex-grow-1 container-p-y">
+        <h1 class="text-start section-header">
+            <i class="fab fa-delicious f-left"></i>Field
+        </h1>
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <!-- Form Section -->
+                <div class="form-card overflow-hidden">
+
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label class="form-label">Field Name</label>
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="Enter field name">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Field Location (Coordinate)</label>
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="Enter GPS coordinates">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Extent Size (sq. m)</label>
+                            <input type="number" class="form-control mb-4 shadow-none" placeholder="Enter extent size in sq. m">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Crops</label>
+                            <select id="crop-type" class="form-control mb-4 shadow-none">
+                                <option value="banana">xyz</option>
+                                <option value="papaya">xyz</option>
+                                <option value="guava">xyz</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Staff</label>
+                            <select id="staff-type" class="form-control mb-4 shadow-none">
+                                <option value="perera">rashmika</option>
+                                <option value="silva">rashmika</option>
+                                <option value="mendis">rashmika</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Field Image 1</label>
+                            <input type="file" class="form-control mb-4 shadow-none" accept="image/*">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Field Image 2</label>
+                            <input type="file" class="form-control mb-4 shadow-none" accept="image/*">
+                        </div>
+                        <div class="text-right mt-3">
+                            <button type="button" class="btn btn-primary btn-sm">save</button>
+                            <button type="button" class="btn btn-secondary btn-sm">cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-8 col-sm-12">
+        <!-- Table Section -->
+        <div class="container">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Field Image</th>
+                        <th scope="col">Field Name</th>
+                        <th scope="col">Field Location</th>
+                        <th scope="col">Extent Size</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="fields-table">
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+
+</section>
 
 </body>
 </html>
