--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,25 +25,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Dashboard</a>
+                    <a class="nav-link" aria-current="page" id="nav-dashboard" >Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="field.html">Field</a>
+                    <a class="nav-link" id="nav-field">Field</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="crop.html">Crop</a>
+                    <a class="nav-link" id="nav-crop">Crop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-disabled="true" href="staff.html">Staff</a>
+                    <a class="nav-link" aria-disabled="true" id="nav-staff">Staff</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="monitoring%20logs.html">Monitoring-Log</a>
+                    <a class="nav-link" id="nav-monitor-log">Monitoring-Log</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="vehicle.html">Vehicle</a>
+                    <a class="nav-link"  id="nav-vehicle">Vehicle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-disabled="true" href="Equipment.html">Equipment</a>
+                    <a class="nav-link" aria-disabled="true" id="nav-equipment">Equipment</a>
                 </li>
 
                 <li class="nav-item" id="nav-logout">
@@ -85,11 +85,11 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">Crops</label>
-                            <select id="crop-type" class="form-control mb-4 shadow-none">
-                                <option value="banana">xyz</option>
-                                <option value="papaya">xyz</option>
-                                <option value="guava">xyz</option>
-                            </select>
+<!--                            <select id="crop-type" class="form-control mb-4 shadow-none">-->
+<!--                                <option value="banana">xyz</option>-->
+<!--                                <option value="papaya">xyz</option>-->
+<!--                                <option value="guava">xyz</option>-->
+<!--                            </select>-->
                         </div>
                         <div class="form-group">
                             <label class="form-label">Staff</label>
@@ -614,5 +614,13 @@
     </div>
     </div>
 </section>
+<!-- jquery -->
+<script src="lib/jquery-3.7.1.min.js"></script>
+
+<!-- bootstrap js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- script js -->
+<script src="js/script.js"></script>
 </body>
 </html>
