--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,35 +158,35 @@
                     <div class="card-body">
                         <div class="form-group">
                             <label class="form-label">Common Name</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter common name">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter common name" id="crop_common_name">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Scientific Name</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder=" enter scientific name">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder=" enter scientific name" id="crop_scientific_name">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Crop Image</label>
-                            <input type="file" class="form-control mb-4 shadow-none" accept="image/*">
+                            <input type="file" class="form-control mb-4 shadow-none" accept="image/*" id="crop_image">
                         </div>
 
                         <div class="form-group">
                             <label class="form-label">Category</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter crop category">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter crop category" id="crop_category">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Season</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter season">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter season" id ="crop_season">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Field Details</label>
-                            <select id="crop-type" class="form-control mb-4 shadow-none">
-                                <option value="xyz">xyz</option>
-                                <option value="xyz">xyz</option>
-                                <option value="xyz">xyz</option>
+                            <select id="field_details" class="form-control mb-4 shadow-none">
+<!--                                <option value="xyz">xyz</option>-->
+<!--                                <option value="xyz">xyz</option>-->
+<!--                                <option value="xyz">xyz</option>-->
                             </select>
                         </div>
                         <div class="text-right mt-3">
-                            <button type="button" class="btn btn-primary btn-sm">save</button>
+                            <button type="button" class="btn btn-primary btn-sm" onclick="saveCrop()">save</button>
                             <button type="button" class="btn btn-secondary btn-sm">cancel</button>
                         </div>
                     </div>
@@ -622,5 +622,7 @@
 
 <!-- script js -->
 <script src="js/script.js"></script>
+
+<script src="controller/CropController.js"></script>
 </body>
 </html>
