--- a/frontend/index.html
+++ b/frontend/index.html
@@ -180,9 +180,6 @@
                         <div class="form-group">
                             <label class="form-label">Field Details</label>
                             <select id="field_details" class="form-control mb-4 shadow-none">
-<!--                                <option value="xyz">xyz</option>-->
-<!--                                <option value="xyz">xyz</option>-->
-<!--                                <option value="xyz">xyz</option>-->
                             </select>
                         </div>
                         <div class="text-right mt-3">
@@ -624,5 +621,8 @@
 <script src="js/script.js"></script>
 
 <script src="controller/CropController.js"></script>
+<script src="controller/Contaroller.js"></script>
+
+
 </body>
 </html>
