--- a/frontend/index.html
+++ b/frontend/index.html
@@ -621,7 +621,7 @@
 <script src="js/script.js"></script>
 
 <script src="controller/CropController.js"></script>
-<script src="controller/Contaroller.js"></script>
+<script src="controller/Controller.js"></script>
 
 
 </body>
