--- a/frontend/index.html
+++ b/frontend/index.html
@@ -148,34 +148,32 @@
 
     <div class="container-fluid light-style flex-grow-1 container-p-y">
         <h1 class="text-start section-header">
-            <i class="fab fa-delicious f-left"></i>Crop
+            <i class="fa-solid fa-seedling"></i>Crop
         </h1>
         <div class="row">
             <div class="col-md-4 col-sm-12">
                 <!-- Form Section -->
                 <div class="form-card overflow-hidden">
-
                     <div class="card-body">
                         <div class="form-group">
                             <label class="form-label">Common Name</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter common name" id="crop_common_name">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="Enter common name of the crop" id="crop_common_name">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Scientific Name</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder=" enter scientific name" id="crop_scientific_name">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="Enter scientific name of the crop" id="crop_scientific_name">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Crop Image</label>
                             <input type="file" class="form-control mb-4 shadow-none" accept="image/*" id="crop_image">
                         </div>
-
                         <div class="form-group">
                             <label class="form-label">Category</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter crop category" id="crop_category">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="Enter crop category (e.g., Cereal)" id="crop_category">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Season</label>
-                            <input type="text" class="form-control mb-4 shadow-none" placeholder="enter season" id ="crop_season">
+                            <input type="text" class="form-control mb-4 shadow-none" placeholder="Enter crop season" id="crop_season">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Field Details</label>
@@ -183,14 +181,13 @@
                             </select>
                         </div>
                         <div class="text-right mt-3">
-                            <button type="button" class="btn btn-primary btn-sm" onclick="saveCrop()">save</button>
-                            <button type="button" class="btn btn-secondary btn-sm">cancel</button>
+                            <button type="button" class="btn btn-warning" onclick="saveCrop()">Save</button>
+                            <button type="button" class="btn btn-primary" onclick="updateCrop()">Update</button>
+                            <button type="button" class="btn btn-info" onclick="clearFields()">Cancel</button>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
     <div class="col-md-8 col-sm-12">
         <!-- Table Section -->
         <div class="container">
